# Syrinx

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.ci.double_fb  sdkconfig.ci.single_fb_no_bb  sdkconfig.ci.single_fb_with_bb  sdkconfig.defaults  sdkconfig.defaults.esp32s3  sdkconfig.old
4寸液晶屏资料/深圳市宏翔瑞 淘宝搜索的到/: GT9xx_Driver_for_Android_V2.4_Hotknot_2014112801.rar  ST7701S+HSD3.95.txt
components/backlight/: CMakeLists.txt  backlight.c  backlight.h
components/bluetooth/: CMakelists.txt  bluetooth.c  bluetooth.h
components/espressif__esp_lcd_touch_ft5x06/: CMakeLists.txt  README.md  esp_lcd_touch_ft5x06.c  idf_component.yml
components/espressif__esp_lcd_touch_ft5x06/include/: esp_lcd_touch_ft5x06.h
components/espressif__esp_lcd_touch_gt911/: CMakeLists.txt  esp_lcd_touch_gt911.c
components/espressif__esp_lcd_touch_tt21100/: CMakeLists.txt  README.md  esp_lcd_touch_tt21100.c  idf_component.yml
components/espressif__esp_lcd_touch_tt21100/include/: esp_lcd_touch_tt21100.h
components/lvgl/: Kconfig  README.md  README_zh.md  idf_component.yml  library.json  library.properties  lv_conf_template.h  lvgl.h  lvgl.mk
components/lvgl/.github/workflows/: build_micropython.yml
components/lvgl/demos/: README.md  lv_demos.h
components/lvgl/demos/music/: README.md  (+1 more)
components/lvgl/docs/: CHANGELOG.md  CONTRIBUTING.md  build.py  conf.py  example_list.py  index.md
components/lvgl/scripts/: changelog-template.hbs  changelog_gen.sh  code-format.cfg  code-format.py  jpg_to_sjpg.py  lv_conf_internal_gen.py  style_api_gen.py
components/lvgl/src/: lv_conf_internal.h
components/lvgl/tests/: README.md  main.py
components/my_mqtt/: CMakeLists.txt  mqtt.c  mqtt.h
components/rs485/: CMakeLists.txt  rs485.c  rs485.h
components/timesync/: CMakeLists.txt  timesync.c  timesync.h
components/wifi/: CMakeLists.txt  wifi.c  wifi.h
docs/: (287条消息) 启明智显分享_基于ESP32-S3方案的4寸86盒开发板快速开发及烧录_启明智显的博客-CSDN博客.html  (287条消息) 启明智显推荐：低成本86盒方案：基于ESP32-S3及4寸全面屏，支持WIFI蓝牙，485、Zigbee、LORA等串口通信_启明智显的博客-CSDN博客.html
docs/(287条消息) 启明智显分享_基于ESP32-S3方案的4寸86盒开发板快速开发及烧录_启明智显的博客-CSDN博客_files/: 3_ami82  auto_dup  blog.js  blog_code-01256533b5.min.css  chart.min.js  common-a1dfbf1dc3.min.js  corporate_blog_enter-7132c16bb8.min.css  csdn-toolbar.js  detail-bff68f3fa1.min.js  html2canvas.min.js  qrcode.js  widget2chart.js
docs/(287条消息) 启明智显推荐：低成本86盒方案：基于ESP32-S3及4寸全面屏，支持WIFI蓝牙，485、Zigbee、LORA等串口通信_启明智显的博客-CSDN博客_files/: 3_u011993802  auto_dup  csdn-login-box.js  ds.js  edit_copy_code-ce0f06f94b.min.js  hm.js  jQuery.print.min.js  pc_wap_highlight-2a2586c533.min.js  sandalstrap.min.css  saved_resource
main/: CMakeLists.txt  Kconfig.projbuild  Kconfig.projbuild.bak  main.c  st7701s.c  st7701s.h  touch.h
ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.c  ui_events.cpp  ui_events.h  ui_helpers.c  ui_helpers.h
ui/components/: ui_comp.c  ui_comp.h  ui_comp_backtomainwindowbtn7.c  ui_comp_backtomainwindowbtn7.h  ui_comp_header_volume.c  ui_comp_header_volume.h  ui_comp_hook.c  ui_comp_hook.h  ui_comp_music_item.c  ui_comp_music_item.h  ui_comp_music_list.c  ui_comp_music_list.h  ui_comp_timeselector.c  ui_comp_timeselector.h  ui_comp_volume_adjust.c  ui_comp_volume_adjust.h  ui_comp_volumeadjustdisabledrange.c  ui_comp_volumeadjustdisabledrange.h
ui/fonts/: ui_font_Downcount_MS12B2.c  ui_font_FFFF.c  ui_font_Font1.c  ui_font_Font100.c  ui_font_Font166.c  ui_font_Font18.c  ui_font_Font30.c  ui_font_Guide_MS18B2.c  ui_font_IdleDate_MS30B2.c  ui_font_IdleTime_MS100B2.c  ui_font_LanTing12.c  ui_font_LanTing18.c  ui_font_LanTingFine16.c  ui_font_LanTingFine18.c  ui_font_LanTingFine22.c  ui_font_LanTingFine24.c  ui_font_MSBlack16.c  ui_font_MSBlack22.c  ui_font_Main_MS22B4.c  ui_font_Music_MS18B2.c  ui_font_Music_MS22B2.c  ui_font_Vice_MS20B4.c  ui_font_giyjg.c
ui/images/: ui_img_1071321554.c  ui_img_1260392355.c  ui_img_12669592.c  ui_img_1311962515.c  ui_img_1422805608.c  ui_img_149594991.c  ui_img_1526512104.c  ui_img_1621519077.c  ui_img_1711952528.c  ui_img_1742736079.c  ui_img_1830113796.c  ui_img_1893023884.c  ui_img_2034599484.c  ui_img_2087007852.c  ui_img_2101671624.c  ui_img_227802216.c  ui_img_236134236.c  ui_img_239308628.c  ui_img_260357382.c  ui_img_304460963.c  ui_img_348826415.c  ui_img_35201459.c  ui_img_404002205.c  ui_img_411136687.c  ui_img_469799613.c  ui_img_490182776.c  ui_img_501316714.c  ui_img_542920328.c  ui_img_542960551.c  ui_img_607840074.c  ui_img_6695340.c  ui_img_720017300.c  ui_img_720023698.c  ui_img_720032643.c  ui_img_720045703.c  ui_img_720048778.c  ui_img_720053126.c  ui_img_72497716.c  ui_img_728059867.c  ui_img_861711258.c  (+6 more)
ui/screens/: ui_Bluetooth_WIndow.c  ui_Guide_Window.c  ui_Idle_Window.c  ui_Main_Window.c  ui_Mode_WIndow.c  ui_Music_Play_Window.c  ui_Music_Window.c  ui_Nature_Sound_Window.c  ui_Settings_Backlight_Window.c  ui_Settings_Bluetooth_Window.c  ui_Settings_ID_Window.c  ui_Settings_Time_Window.c  ui_Settings_Wifi_Window.c  ui_Settings_Window.c  ui_Wake_up_Window.c
uis/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.c  ui_events.h  ui_helpers.c  ui_helpers.h
uis/components/: ui_comp.c  ui_comp.h  ui_comp_hook.c  ui_comp_hook.h  ui_comp_music_item1.c  ui_comp_music_item1.h
uis/fonts/: ui_font_LanTIng20.c  ui_font_LanTing18.c  ui_font_LanTing40.c  ui_font_LanTingFine22.c
uis/images/: ui_img_1260392355.c  ui_img_1422805608.c  ui_img_149594991.c  ui_img_1708134587.c  ui_img_1711952528.c  ui_img_1830113796.c  ui_img_239308628.c  ui_img_348826415.c  ui_img_404002205.c  ui_img_490182776.c  ui_img_728059867.c  ui_img_861711258.c
uis/screens/: ui_Backlight_Settings.c  ui_Bluetooth_Settings.c  ui_ID_Settings.c  ui_Settings.c  ui_Time_Settings.c
启明测试板原理图及屏幕驱动/: 9503V_hsd3.95ips(HSD040BPN1-A00).txt  ZX3D95CE01S_UR_4848.c
(+204 files in other folders)
