SET(SOURCES components/ui_comp_backtomainwindowbtn7.c
    components/ui_comp_music_item.c
    components/ui_comp_music_list.c
    components/ui_comp.c
    screens/ui_Main_Window.c
    screens/ui_Music_Window.c
    screens/ui_Nature_Sound_Window.c
    screens/ui_Bluetooth_WIndow.c
    screens/ui_Mode_WIndow.c
    screens/ui_Wake_up_Window.c
    screens/ui_Guide_Window.c
    screens/ui_Settings_Window.c
    screens/ui_Settings_Backlight_Window.c
    screens/ui_Settings_Bluetooth_Window.c
    screens/ui_Settings_Time_Window.c
    screens/ui_Settings_ID_Window.c
    screens/ui_Settings_Wifi_Window.c
    screens/ui_Music_Play_Window.c
    screens/ui_Idle_Window.c
    ui.c
    components/ui_comp_hook.c
    ui_helpers.c
    ui_events.c
    images/ui_img_1621519077.c
    images/ui_img_490182776.c
    images/ui_img_2087007852.c
    images/ui_img_227802216.c
    images/ui_img_907415264.c
    images/ui_img_501316714.c
    images/ui_img_967182345.c
    images/ui_img_72497716.c
    images/ui_img_236134236.c
    images/ui_img_1742736079.c
    images/ui_img_35201459.c
    images/ui_img_2101671624.c
    images/ui_img_861711258.c
    images/ui_img_348826415.c
    images/ui_img_12669592.c
    images/ui_img_2034599484.c
    images/ui_img_304460963.c
    images/ui_img_1893023884.c
    images/ui_img_720053126.c
    images/ui_img_720048778.c
    images/ui_img_720023698.c
    images/ui_img_720017300.c
    images/ui_img_720032643.c
    images/ui_img_720045703.c
    images/ui_img_1830113796.c
    images/ui_img_1526512104.c
    images/ui_img_149594991.c
    images/ui_img_1711952528.c
    images/ui_img_1422805608.c
    images/ui_img_728059867.c
    images/ui_img_404002205.c
    images/ui_img_239308628.c
    images/ui_img_1260392355.c
    images/ui_img_469799613.c
    images/ui_img_1311962515.c
    images/ui_img_542960551.c
    images/ui_img_542920328.c
    images/ui_img_899744137.c
    fonts/ui_font_LanTing18.c
    fonts/ui_font_LanTIng20.c
    fonts/ui_font_LanTing40.c
    fonts/ui_font_LanTingFine18.c
    fonts/ui_font_LanTingFine22.c
    fonts/ui_font_LanTingFine24.c
    fonts/ui_font_Font100.c
    fonts/ui_font_Font30.c)

add_library(ui ${SOURCES})
